revision recursion and backtracking